2008-11-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.decls:   Fix signature and implementation of
	* generic/tclDecls.h:  Tcl_HashStats, such that it conforms
	* generic/tclHash.c:   to the documentation.
	* generic/tclVar.c:    [Bug 2308236]
	* doc/Hash.3
	* generic/tclDictObj.c Convert Tcl_SetResult call to Tcl_SetObjResult.

2008-11-17  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>

	* tests/for.test: Check for uncompiled-for-continue [Bug 2186888]
	fixed earlier.

	* generic/tcl.h:        Fix [Bug 2251175]: missing backslash
	* generic/tclCompCmds.c substitution on expanded literals.
	* generic/tclCompile.c
	* generic/tclParse.c
	* generic/tclTest.c
	* tests/compile.test
	* tests/parse.test

2008-11-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclTest.c:   replace two times Tcl_SetResult with
	                       Tcl_SetObjResult, a little simplification
	                       in preparation for the TIP #340 patch.

2008-11-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h:     rename static function FSUnloadTempFile to
	* generic/tclIOUtil.c   TclFSUnloadTempFile, needed in tclLoad.c

	* generic/tclLoad.c     Fixed [Bug 2269431]: load of shared
	                        objects leaves temporary files on windows

2008-11-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/registry.test: Use HKCU to avoid requiring admin access
	for registry testing on vista/server2008

2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclNamesp.c: Eliminate warning: passing arg 4 of
	                       `Tcl_SplitList' from incompatible pointer type
	* win/tcl.m4:       reverted change from 2008-11-06 (was under the
	                    impression that "-Wno-implicit-int" added an
	                    extra warning)
	* win/configure     (regenerated)
	* unix/tcl.m4:      Use -O2 as gcc optimization compiler flag, and get
	                    rid of -Wno-implicit-int for UNIX
	* unix/configure    (regenerated)
